<resources>
    <string name="app_name">居家管家</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scan_tips">将扫描框对准二维码远近调节即可自动扫描</string>
    <string name="open_light">打开手电</string>
    <string name="close_light">关闭手电</string>
    <string name="cleantv">1:保洁:保洁</string>
    <string name="finishtv">完成</string>
    <string name="unfinishtv">未完成</string>
    <string name="jujia_tv">居家护理员移动端</string>
    <string name="usertv">用户名</string>
    <string name="useredit">请输入帐户名</string>
    <string name="passwordtv">密码</string>
    <string name="passwordedit">请输入密码</string>
    <string name="login_but">登录</string>
    <string name="returntv">返回</string>
    <string name="servicetv">居家服务</string>
    <string name="nametv">姓名</string>
    <string name="edittv">请输入姓名</string>
    <string name="sextv">性别</string>
    <string name="sex_boy">男</string>
    <string name="sex_girl">女</string>
    <string name="borntv">年龄</string>
    <string name="selectedit">出生日期</string>
    <string name="connecttv">联系方式</string>
    <string name="inputedit">请输入联系方式</string>
    <string name="persontv">身份证号</string>
    <string name="eitperson">请输入省份证号</string>
    <string name="oldertv">起始时间</string>
    <string name="editoldertv">请选择时间</string>
    <string name="appoint_time">结束时间</string>
    <string name="select_edit">请选择时间</string>
    <string name="quary_button">查询</string>
    <string name="suit_tv">符合当前条件人员</string>
    <string name="renwutv">任务时间</string>
    <string name="caozuotv">操作</string>
    <string name="fei">汪龙fei</string>
    <string name="time">2017-9-11 11：25</string>
    <string name="start_work">开始任务</string>
    <string name="cancel">取消</string>
    <string name="select_time">请选择时间</string>
    <string name="sure">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minutes">分</string>
    <string name="username">姓名</string>
    <string name="tasksure">任务确认</string>
    <string name="surein">确认</string>
    <string name="allselect">全选</string>
    <string name="list_task">任务列表</string>
    <string name="search__text">急救搜索</string>
    <string name="help">报警时间</string>
</resources>
