<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <RelativeLayout
        android:id="@+id/title_rl"
        android:background="#0aec68"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:id="@+id/return_imag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowreturn"/>
        <TextView
            android:textColor="#fff"
            android:textSize="18dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/return_imag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returntv"/>
        <TextView
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicetv"/>
    </RelativeLayout>
 <TextView
     android:id="@+id/username_tv"
     android:textSize="20dp"
     android:layout_marginTop="20dp"
     android:layout_marginLeft="20dp"
     android:layout_below="@+id/title_rl"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/nametv"/>
    <EditText
        android:id="@+id/edit_tv"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/title_rl"
        android:layout_toRightOf="@+id/username_tv"
        android:hint="@string/edittv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"/>
    <View
        android:id="@+id/show_view"
        android:layout_marginTop="20dp"
        android:background="#f5f5f5"
        android:layout_below="@+id/edit_tv"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
         android:id="@+id/sex_tv"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/show_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sextv"/>
   <RelativeLayout
       android:id="@+id/boy_rl"
       android:layout_below="@+id/show_view"
       android:layout_toRightOf="@+id/sex_tv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
       <ImageView
           android:id="@+id/sex_boyiv"
           android:layout_marginLeft="20dp"
           android:layout_marginTop="22dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/nochose"/>
       <TextView
           android:id="@+id/boy_tv"
           android:layout_marginLeft="10dp"
           android:textSize="20dp"
           android:layout_toRightOf="@+id/sex_boyiv"
           android:layout_marginTop="20dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sex_boy"/>
   </RelativeLayout>

<RelativeLayout
    android:id="@+id/girl_rl"
    android:layout_below="@+id/show_view"
    android:layout_toRightOf="@+id/boy_rl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView

        android:id="@+id/sex_girliv"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nochose"/>
    <TextView
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/sex_girliv"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex_girl"/>
</RelativeLayout>

    <View
        android:id="@+id/show_view1"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/sex_tv"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"/>
    <TextView

        android:id="@+id/born_tv"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/show_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borntv"/>
    <EditText
        android:id="@+id/born_edit"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/born_tv"
        android:hint="@string/selectedit"
        android:layout_below="@+id/show_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        />
    <View
        android:id="@+id/born_view"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/born_tv"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"/>



    <TextView
        android:id="@+id/oldperson_tv"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/born_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oldertv"/>
    <EditText
        android:id="@+id/olderperson_edit"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:layout_toRightOf="@+id/oldperson_tv"
        android:layout_below="@+id/born_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/editoldertv"/>
    <View
        android:id="@+id/olderperson_view"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/oldperson_tv"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"/>
    <TextView
        android:id="@+id/yuyue_time"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/olderperson_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appoint_time"/>
    <EditText
        android:id="@+id/yuyue_edit"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/yuyue_time"
        android:hint="@string/select_edit"
        android:layout_below="@+id/olderperson_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        />
    <Button
        android:id="@+id/quary_button"
        android:textColor="#fff"
        android:background="#fbd23a"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quary_button"/>
</RelativeLayout>
