<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0fdc3b"
    >

    <RelativeLayout
        android:id="@+id/back_rl"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:alpha="0.5"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="300dp">

    </RelativeLayout>
    <TextView
        android:id="@+id/show_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_alignTop="@+id/back_rl"
        android:textColor="#07f10f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jujia_tv"
        android:textSize="20dp"/>
    <View
        android:id="@+id/huli_view"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/show_name"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff"/>
    <TextView
        android:id="@+id/user_name"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/huli_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usertv"/>
    <EditText
        android:textColor="#222"
        android:id="@+id/user_editname"
        android:layout_marginLeft="20dp"
        android:hint="@string/useredit"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/user_name"
        android:layout_below="@+id/huli_view"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_height="35dp"
        android:background="@drawable/edit_back"
        />
    <TextView
        android:id="@+id/user_tvpassword"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordtv"/>
    <EditText

        android:textColor="#222"
        android:layout_alignLeft="@+id/user_editname"
        android:layout_below="@+id/user_editname"
        android:layout_toRightOf="@+id/user_tvpassword"
        android:layout_marginTop="20dp"
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_height="35dp"
        android:hint="@string/passwordedit"
        android:inputType="textPassword"
        android:background="@drawable/edit_back"/>
<Button
    android:id="@+id/post_login"
    android:onClick="PostClick"
    android:background="#f4a405"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/user_password"
    android:textColor="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_but"/>


</RelativeLayout>
