<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">
    <RelativeLayout
        android:id="@+id/showmessage_rl"
        android:background="#d1cece"
        android:layout_below="@+id/ok_rl"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/name_tv"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nametv"/>
        <TextView

            android:textSize="14dp"
            android:layout_marginLeft="100dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sextv"/>
        <TextView
            android:id="@+id/work_time"
            android:textSize="14dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renwutv"/>
        <TextView
            android:textSize="14dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caozuotv"/>
    </RelativeLayout>
    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:layout_below="@+id/showmessage_rl"
        android:id="@+id/list_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:ptrAnimationStyle="flip">
    </com.handmark.pulltorefresh.library.PullToRefreshListView>
    <TextView
        android:visibility="gone"
        android:id="@+id/home_tv"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="您还没有完成哦"/>
</RelativeLayout>
