<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <RelativeLayout
        android:id="@+id/ok_rl"
        android:background="#05e65b"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <RelativeLayout
            android:id="@+id/return_back"
            android:layout_centerVertical="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/left_iv"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrowreturn"/>
            <TextView
                android:textColor="#fff"
                android:textSize="20dp"
                android:layout_toRightOf="@+id/left_iv"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/returntv"/>
        </RelativeLayout>

        <TextView
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suit_tv"/>
        <ImageView
            android:id="@+id/qiuck_scan"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scan"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/showmessage_rl"
        android:background="#d1cece"
        android:layout_below="@+id/ok_rl"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/name_tv"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nametv"/>
        <TextView

            android:textSize="14dp"
            android:layout_marginLeft="100dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sextv"/>
        <TextView
            android:id="@+id/work_time"
            android:textSize="14dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renwutv"/>
        <TextView
            android:textSize="14dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caozuotv"/>
    </RelativeLayout>
    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:layout_below="@+id/showmessage_rl"
        android:id="@+id/list_worker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:ptrAnimationStyle="flip">
    </com.handmark.pulltorefresh.library.PullToRefreshListView>
    <RelativeLayout
        android:layout_below="@+id/showmessage_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/shoptu_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="#BFBFBF"
            android:textSize="18dp"
            android:visibility="gone"
            android:layout_below="@+id/shoptu_iv"
            android:id="@+id/tishi_newsou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </RelativeLayout>

</RelativeLayout>
