<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:background="#05E65B"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/return_iv"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowreturn"/>
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#fff"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_task"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/help_tv"
            android:textSize="18dp"
            android:textColor="#fff"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="报警"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/showmessage_rl"
        android:background="#d1cece"
        android:layout_below="@+id/ok_rl"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/name_tv"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nametv"/>
        <TextView
            android:textSize="14dp"
            android:layout_marginLeft="100dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sextv"/>
        <TextView
            android:id="@+id/work_time"
            android:textSize="14dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"/>
        <TextView
            android:textSize="14dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caozuotv"/>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/nomessage_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/older_iv"
           android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/older_iv"
            android:textSize="18dp"
            android:textColor="#222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="没有老人的服务信息"/>
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/servicelist_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:ptrAnimationStyle="flip">
    </com.handmark.pulltorefresh.library.PullToRefreshListView>
</LinearLayout>
