<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chengduhome.SuosuoActivity">
<RelativeLayout
    android:background="#04f114"
    android:layout_width="match_parent"
    android:layout_height="50dp">
    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrowreturn"/>
    <TextView
        android:textSize="18dp"
        android:textColor="#fff"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="符合条件人员"/>
</RelativeLayout>
    <RelativeLayout
        android:id="@+id/showmessage_rl"
        android:background="#d1cece"
        android:layout_below="@+id/ok_rl"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/name_tv"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nametv"/>
        <TextView

            android:textSize="14dp"
            android:layout_marginLeft="100dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sextv"/>
        <TextView
            android:id="@+id/work_time"
            android:textSize="14dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renwutv"/>
        <TextView
            android:textSize="14dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caozuotv"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/no_serarch"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="换个条件试试"/>
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/list_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:ptrAnimationStyle="flip">
    </com.handmark.pulltorefresh.library.PullToRefreshListView>
</LinearLayout>
