<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/list_rl"
        android:background="#0aec68"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/imag_iv"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowreturn"/>
        <TextView
            android:id="@+id/retuan_tv"
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imag_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returntv"/>
        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/user_tvname"
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"/>
        <TextView
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasksure"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/show_nomessage"
        android:visibility="gone"
        android:layout_below="@+id/list_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_centerInParent="true"
            android:id="@+id/shoptu_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="#BFBFBF"
            android:textSize="18dp"
            android:text="ddss"
            android:layout_below="@+id/shoptu_iv"
            android:id="@+id/tishi_newsou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </RelativeLayout>
    <ListView

        android:descendantFocusability="beforeDescendants"
        android:id="@+id/list_show"
        android:layout_below="@+id/list_rl"
        android:layout_above="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
    <RelativeLayout
        android:background="#fff"
        android:id="@+id/bottom_bar"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >
        <Button
            android:layout_centerVertical="true"
            android:id="@+id/sure_button"
            android:textColor="#fff"
            android:background="#f17508"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/surein"/>
        <CheckBox
            android:layout_centerVertical="true"
            android:id="@+id/sure_iv"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/sure_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/tab_chose_status"
            android:button="@null"
           />
        <TextView
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/sure_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allselect"/>

    </RelativeLayout>
</RelativeLayout>
